grammar.js
        program: $ => $._statements,

        //
        // Statements
        //
        _statements: $ => repeat1(seq($._statement, choice(";", /\n/))),

        _compiler_control_statement: $ =>
            choice(
                $.conditional_compilation_block,
                $.line_control_statement,
                $.diagnostic_statement
            ),

        expression: $ =>
            seq(
                optional($._try_operator),
                choice(
                    seq(
                        optional(alias($.operator, $.prefix_operator)),
                        field("postfix_expression", $._postfix_expression)
                    ),
                    field("in_out_expression", $.in_out_expression),
                    field("binary_expression", $.binary_expression)
                ),
            ),

        _try_operator: $ => choice("try", seq("try", "?"), seq("try", "!")),

        binary_expression: $ =>
            seq(
                field("left", $.expression),
                choice(
                    seq(
                        alias($.operator, $.binary_operator),
                        field("right", $.expression)
                    ),
                    seq(
                        "=",
                        optional($._try_operator),
                        field("right", $.expression)
                    ),
                    seq(
                        "?",
                        $.expression,
                        ":",
                        optional($._try_operator),
                        $.expression
                    ),
                    field("type_cast", $.type_casting_operator)
                )
            ),

        _postfix_expression: $ =>
            choice(
                $._primary_expression,
                seq($._postfix_expression, alias($.operator, $.postfix_operator)),
                $.function_call_expression,
                $.initializer_expression,
                $.explicit_member_expression,
                $.postfix_self_expression,
                $.subscript_expression,
                $.forced_value_expression,
                $.optional_chaining_expression
            ),

        function_result: $ =>
            choice(
                seq("->", repeat($.attribute), $._type),
                seq("->", repeat($.attribute), $._type)
            ),

        //
        // Patterns
        //
        _pattern: $ =>
            choice(
                seq($.wildcard_pattern, optional($.type_annotation)),
                seq($.identifier_pattern, optional($.type_annotation)),
                $.value_binding_pattern,
                seq($.tuple_pattern, optional($.type_annotation)),
                $.enum_case_pattern,
                $.optional_pattern,
                $.type_casting_pattern,
                $.expression
            ),

        identifier_pattern: $ => $.identifier,

        _declaration: $ =>
            choice(
                $.import_declaration,
                $.constant_declaration,
                $.variable_declaration,
                $.typealias_declaration,
                $.function_declaration,
                $.enum_declaration,
                $.struct_declaration,
                $.class_declaration,
                $.protocol_declaration,
                $.initializer_declaration,
                $.deinitializer_declaration,
                $.extension_declaration,
                $.subscript_declaration,
                $._operator_declaration,
                $.precedence_group_declaration
            ),

        _code_block: $ => choice(
                              seq("{", "}"),
                              field("statements", seq("{", $._statements, "}")),
                              field("statements", seq("{", $._statement, "}"))
                          ),

        import_declaration: $ =>
            seq(
                repeat($.attribute),
                "import",
                optional($._import_kind),
                commaDot1($._import_path_identifier)
            ),

        _import_kind: $ =>
            token(choice(
                "typealias",
                "struct",
                "class",
                "enum",
                "protocol",
                "let",
                "var",
                "func"
            )),

        _import_path_identifier: $ => choice(field("identifier", $.identifier), $.operator),

        constant_declaration: $ =>
            seq(
                repeat($.attribute),
                repeat($._declaration_modifier),
                "let",
                commaSep1(field("pattern_initializer", $.pattern_initializer))
            ),

        pattern_initializer: $ => seq($._pattern, field("value", optional($.initializer))),

        initializer: $ => seq("=", $.expression),

        variable_declaration: $ =>
            choice(
                seq(
                    $.variable_declaration_head,
                    commaSep1(field("pattern_initializer", $.pattern_initializer))
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.type_annotation,
                    $._code_block
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.type_annotation,
                    $.getter_setter_block
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.type_annotation,
                    $.getter_setter_keyword_block
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.initializer,
                    $.willSet_didSet_block
                ),
                seq(
                    $.variable_declaration_head,
                    $.identifier,
                    $.type_annotation,
                    optional($.initializer),
                    $.willSet_didSet_block
                )
            ),

        variable_declaration_head: $ =>
            seq(
                repeat($.attribute),
                repeat($._declaration_modifier),
                "var"
            ),

        getter_setter_keyword_block: $ =>
            choice(
                seq(
                    "{",
                    $.getter_keyword_clause,
                    optional($.setter_keyword_clause),
                    "}"
                ),
                seq("{", $.setter_keyword_clause, $.getter_keyword_clause, "}")
            ),

        getter_keyword_clause: $ =>
            seq(repeat($.attribute), optional($._mutation_modifier), "get"),

        setter_keyword_clause: $ =>
            seq(repeat($.attribute), optional($._mutation_modifier), "set"),

        typealias_declaration: $ =>
            seq(
                repeat($.attribute),
                optional($._access_level_modifier),
                "typealias",
                $._typealias_name,
                optional($.generic_parameter_clause),
                $.typealias_assignment
            ),

        _typealias_name: $ => $.identifier,

        typealias_assignment: $ => seq("=", $._type),

        function_declaration: $ =>
            seq(
                $.function_head,
                field("name", $.function_name),
                optional($.generic_parameter_clause),
                $._function_signature,
                optional($.generic_where_clause),
                $._code_block
            ),

        function_head: $ =>
            seq(
                repeat($.attribute),
                repeat($._declaration_modifier),
                "func"
            ),

        function_name: $ => choice($.identifier, $.operator),

        _function_signature: $ =>
            choice(
                seq(
                    $._parameter_clause,
                    optional("throws"),
                    optional($.function_result)
                ),
                seq($._parameter_clause, "rethrows", optional($.function_result))
            ),

        _parameter_clause: $ =>
            choice(
                seq("(", ")"),
                seq("(", commaSep1(field("parameters", $.parameter)), ")")
            ),

        parameter: $ =>
            choice(
                seq(
                    optional(alias($.identifier, $.external_parameter_name)),
                    field("identifier", $.identifier),
                    $.type_annotation,
                    optional($._default_argument_clause)
                ),
                seq(
                    optional(alias($.identifier, $.external_parameter_name)),
                    field("identifier", $.identifier),
                    $.type_annotation
                ),
                seq(
                    optional(alias($.identifier, $.external_parameter_name)),
                    field("identifier", $.identifier),
                    $.type_annotation,
                    "..."
                )
            ),

        _default_argument_clause: $ => seq("=", $.expression),

        enum_declaration: $ =>
            choice(
                seq(
                    repeat($.attribute),
                    optional($._access_level_modifier),
                    $.union_style_enum
                ),
                seq(
                    repeat($.attribute),
                    optional($._access_level_modifier),
                    $.raw_value_style_enum
                )
            ),

        union_style_enum: $ =>
            seq(
                optional("indirect"),
                "enum",
                alias($.identifier, $.enum_name),
                optional($.generic_parameter_clause),
                optional($.type_inheritance_clause),
                optional($.generic_where_clause),
                "{",
                repeat($.union_style_enum_member),
                "}"
            ),

        union_style_enum_member: $ =>
            choice(
                $._declaration,
                $.union_style_enum_case_clause,
                $._compiler_control_statement
            ),

        union_style_enum_case_clause: $ =>
            seq(
                repeat($.attribute),
                optional("indirect"),
                "case",
                commaSep1($.union_style_enum_case)
            ),

        union_style_enum_case: $ =>
            seq(alias($.identifier, $.enum_case_name), optional($.tuple_type)),

        struct_declaration: $ =>
            seq(
                repeat($.attribute),
                optional($._access_level_modifier),
                "struct",
                field("struct_name", $.identifier),
                optional($.generic_parameter_clause),
                field("type_inheritance_clause", optional($.type_inheritance_clause)),
                optional($.generic_where_clause),
                field("body", $.struct_body)
            ),

        struct_body: $ => seq("{", repeat($._struct_member), "}"),

        _struct_member: $ =>
            choice($._declaration, $._compiler_control_statement),

        initializer_declaration: $ =>
            choice(
                seq(
                    $._initializer_head,
                    optional($.generic_parameter_clause),
                    $._parameter_clause,
                    optional("throws"),
                    optional($.generic_where_clause),
                    $._initializer_body
                ),
                seq(
                    $._initializer_head,
                    optional($.generic_parameter_clause),
                    $._parameter_clause,
                    "rethrows",
                    optional($.generic_where_clause),
                    $._initializer_body
                )
            ),

        _initializer_head: $ =>
            choice(
                seq(
                    repeat($.attribute),
                    repeat($._declaration_modifier),
                    field("keyword", $.init)
                ),
                seq(
                    repeat($.attribute),
                    repeat($._declaration_modifier),
                    field("keyword", $.init),
                    "?"
                ),
                seq(
                    repeat($.attribute),
                    repeat($._declaration_modifier),
                    field("keyword", $.init),
                    "!"
                )
            ),

        init: $ => token("init"),

        _initializer_body: $ => $._code_block,

        extension_declaration: $ =>
            seq(
                repeat($.attribute),
                optional($._access_level_modifier),
                "extension",
                field("name", $.type_identifier),
                field("type_inheritance_clause", optional($.type_inheritance_clause)),
                optional($.generic_where_clause),
                field("body", $.extension_body)
            ),

        extension_body: $ => seq("{", repeat($._extension_member), "}"),

        _extension_member: $ =>
            choice($._declaration, $._compiler_control_statement),

        subscript_declaration: $ =>
            seq(
                $.subscript_head,
                $.subscript_result,
                optional($.generic_where_clause),
                choice(
                    $._code_block,
                    $.getter_setter_block,
                    $.getter_setter_keyword_block
                )
            ),

        subscript_head: $ =>
            seq(
                repeat($.attribute),
                repeat($._declaration_modifier),
                "subscript",
                optional($.generic_parameter_clause),
                $._parameter_clause
            ),

        subscript_result: $ => seq("->", repeat($.attribute), $._type),

        infix_operator_declaration: $ =>
            seq(
                "infix",
                "operator",
                $.operator,
                optional($.infix_operator_group)
            ),

        infix_operator_group: $ => seq(":", alias($.identifier, $.precedence_group_name)),

        precedence_group_declaration: $ =>
            seq(
                "precedencegroup",
                alias($.identifier, $.precedence_group_name),
                "{",
                repeat($.precedence_group_attribute),
                "}"
            ),

        precedence_group_attribute: $ =>
            choice(
                $.precedence_group_relation,
                $.precedence_group_assignment,
                $.precedence_group_associativity
            ),

        precedence_group_assignment: $ => seq("assignment", ":", $._literal),

        _declaration_modifier: $ =>
            choice(
                "class",
                "convenience",
                "dynamic",
                "final",
                "infix",
                "lazy",
                "optional",
                "override",
                "postfix",
                "prefix",
                "required",
                "static",
                "unowned",
                seq("unowned", "(", "safe", ")"),
                seq("unowned", "(", "unsafe", ")"),
                "weak",
                $._access_level_modifier,
                $._mutation_modifier
            ),

        _access_level_modifier: $ =>
            choice(
                "private",
                seq("private", "(", "set", ")"),
                "fileprivate",
                seq("fileprivate", "(", "set", ")"),
                "internal",
                seq("internal", "(", "set", ")"),
                "public",
                seq("public", "(", "set", ")"),
                "open",
                seq("open", "(", "set", ")")
            ),

        boolean_literal: $ => choice("true", "false"),
