corpus/comments.txt
==========================
Line comments
==========================

// this is a comment
var foo =
  // another comment
  bar

---

(program
  (comment)
  (variable_declaration
    (variable_declaration_head)
    pattern_initializer: (pattern_initializer
      (expression
        binary_expression: (binary_expression
          left: (expression
            postfix_expression: (identifier))
          (comment)
          right: (expression
            postfix_expression: (identifier)))))))

==========================
Documentation comments
==========================

/**
  this is a documentation comment
  with two lines.
*/
var foo =
  // another comment
  bar

/// A single-line documentation comment
let apple = pie

/// A documentation comment
/// with three
/// lines
func apply() { }

---

(program
  (comment)
  (variable_declaration
    (variable_declaration_head)
    pattern_initializer: (pattern_initializer
      (expression
        binary_expression: (binary_expression
          left: (expression
            postfix_expression: (identifier))
          (comment)
          right: (expression
            postfix_expression: (identifier))))))
  (comment)
  (constant_declaration
    pattern_initializer: (pattern_initializer
      (identifier_pattern
        (identifier))
      value: (initializer
        (expression
          postfix_expression: (identifier)))))
  (comment)
  (comment)
  (comment)
  (function_declaration
    (function_head)
    name: (function_name
      (identifier))))
